--- a/style.css
+++ b/style.css
@@ -136,6 +136,7 @@ button {
 .profile__me {
   border-radius: 50%;
   margin-bottom: 10rem;
+  max-height: 35rem;
 }
 @media (max-width: 600px) {
   .profile__me {
